fixed mobile bug wherer there was weird overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,6 +11,10 @@ body {
   overflow-x: hidden;
 }
 
+#__nuxt {
+  overflow: hidden;
+}
+
 *,
 *::after,
 *::before {
